fix spacing issues

--- a/src/pages/download.scss
+++ b/src/pages/download.scss
@@ -160,7 +160,7 @@
 	}
 
 	.download-images__circle {
-		margin-top: -120%;
+		margin-top: -100%;
 		position: relative;
 		z-index: 0;
 		width: 130%;
@@ -170,18 +170,17 @@
 		position: relative;
 		z-index: 2;
 		max-width: 80%;
-		margin: 10% auto;
+		margin: 2rem auto;
 
 		&.mac {
 			margin-bottom: 10%;
 			max-width: unset;
 			width: 120%;
-			margin: 0 -10%;
-			margin-top: 72.8%;
+			margin: 1rem -10% 2rem;
 
 			@media (min-width: 1100px) {
 				width: 190%;
-				margin: 72.8% -45% 10%;
+				margin: 72.8% -45% 3rem;
 			}
 		}
 	}
